Overflow fix

--- a/src/routes/home/home.styles.scss
+++ b/src/routes/home/home.styles.scss
@@ -255,15 +255,13 @@
 
     .transparency-hero{
         justify-content: center;
-        overflow: hidden;
-        
         h2{
             width: 80%;
-            margin: 20% 0%;
+            margin: 10% 0%;
         }
         
         img{
-            margin: 1% 9%;
+            margin: 0% 9%;
             height: 70vh;
             position: absolute;
             z-index: -1;
